test/parsing/ferguson/reserved-owned.chpl
var owned = 0;

proc f(owned) {
}

class owned {
  var owned =0;
}

type owned = real;

proc owned() {
}

proc test() {
  try {
  } catch owned {
  }
}
